Fix snap path snafoo

--- a/puke-snap.yaml
+++ b/puke-snap.yaml
@@ -2,4 +2,4 @@
 platform:
     # Where to deploy the builded stuff
     ALLOWED_DOMAIN: 'app.roxee.net'
-    DEPLOY_ROOT: '/var/www/deploy/static/lib'
+    DEPLOY_ROOT: '/var/www/deploy/static'
