--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -1,5 +1,6 @@
 # Platform dependent stuff: change according to your milage
 user-snap:
+    X_PREVENT_YAK_YAKING: 'yeah'
 
 user-dmp:
     ALLOWED_DOMAIN: 'app.roxee.net'
