--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -4,12 +4,12 @@ user-jenkins-Linux:
 user-dmp-box-Darwin:
     ROOT: '${HOME}/buildd/webitup/build'
     DEPLOY_ROOT: '${HOME}/buildd/webitup/deploy/web/static'
-    ALLOWED_DOMAIN: 'app.roxee.loft'
+    ALLOWED_DOMAIN: 'app.roxee.loft:4242'
 
 user-raildecom-box-Darwin:
     ROOT: '${HOME}/workspace/webitup/buildd'
     DEPLOY_ROOT: '${HOME}/workspace/webitup/deploy/web'
-    ALLOWED_DOMAIN: 'app.roxee.loft'
+    ALLOWED_DOMAIN: 'app.roxee.loft:4242'
 
 yak:
     ############ Package basic informations
