--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -132,11 +132,11 @@ yak:
             "Latest": "2.0.3/LAB.src.js"
 
     # Chosen, a Select Box Enhancer for jQuery
-        chosen-stable.js:
+        jquery-chosen-stable.js:
             "License": "MIT"
             "Source": "https://raw.github.com/harvesthq/chosen/master/chosen/chosen.jquery.js"
             "Destination": "org/harvest"
-            "Latest": "jquery.chosen.js"
+            "Latest": "chosen.jquery.js"
 
 # # We don't use closure (yet)
 #     "closure-latest":
