--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -149,9 +149,9 @@ yak:
     # lightweight javascript date library for parsing, manipulating, and formatting dates.
         momentjs-stable.js:
             "License": "BSD"
-            "Source": "https://nodeload.github.com/timrwood/moment/zipball/1.2.0"
+            "Source": "https://github.com/timrwood/moment/tarball/1.2.0"
             "Destination": "org/timrwood"
-            "Latest": "timrwood-moment-11324f3/moment.js"
+            "Latest": "momentjs-1.2.0/timrwood-moment-11324f3/moment.js"
 
             
 
