--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -153,7 +153,7 @@ yak:
             "Destination": "com/hoverIntent"
             "Latest": "jquery.hoverIntent.js"
 
-        raphael-min.js:
+        raphael.js:
             "License": "MIT"
             "Source": "https://raw.github.com/DmitryBaranovskiy/raphael/master/raphael.js"
             "Destination": "com/raphaeljs"
