--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -93,9 +93,9 @@ yak:
 
         ember-stable.js:
             "License": "MIT"
-            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.5.js"
+            "Source": "https://github.com/downloads/emberjs/ember.js/ember-latest.js"
             "Destination": "com/ember"
-            "Latest": "ember-0.9.5.js"
+            "Latest": "ember-latest.js"
     # Doesn't have a notino of "stable" releases - whatever is master on github is the "stable" release
         normalize-stable.css:
             "License": "Public domain"
