--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -93,9 +93,9 @@ yak:
 
         ember-stable.js:
             "License": "MIT"
-            "Source": "https://github.com/downloads/emberjs/ember.js/ember-latest.js"
+            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.5.js"
             "Destination": "com/ember"
-            "Latest": "ember-latest.js"
+            "Latest": "ember-0.9.5.js"
     # Doesn't have a notino of "stable" releases - whatever is master on github is the "stable" release
         normalize-stable.css:
             "License": "Public domain"
@@ -153,12 +153,7 @@ yak:
             "Destination": "com/hoverIntent"
             "Latest": "jquery.hoverIntent.js"
 
-        raphael.js:
-            "License": "MIT"
-            "Source": "https://raw.github.com/DmitryBaranovskiy/raphael/master/raphael.js"
-            "Destination": "com/raphaeljs"
-            "Latest": "raphael.js"
-
+        
 
 
 
