--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -96,6 +96,13 @@ yak:
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.5.js"
             "Destination": "com/ember"
             "Latest": "ember-0.9.5.js"
+            
+        ember-latest.js:
+            "License": "MIT"
+            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-latest.js"
+            "Destination": "com/ember"
+            "Latest": "ember-latest.js"
+
     # Doesn't have a notino of "stable" releases - whatever is master on github is the "stable" release
         normalize-stable.css:
             "License": "Public domain"
