--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -172,7 +172,7 @@ yak:
             "Destination": "org/timrwood"
             "Latest": "moment.js"
 
-        jquery-history.js:
+        jquery-history-stable.js:
             "License": "BSD"
             "Source": "http://balupton.github.com/history.js/scripts/bundled/html4+html5/jquery.history.js"
             "Destination": "org/balupton"
