--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -153,7 +153,7 @@ yak:
             "Latest": "keyboard.0.2.2.js"
 
     # lightweight javascript date library for parsing, manipulating, and formatting dates.
-        jquery-hoverIntent.js:
+        jquery-hoverIntent-stable.js:
             "License": "MIT"
             "Source": "http://cherne.net/brian/resources/jquery.hoverIntent.js"
             "Destination": "com/hoverIntent"
