--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -94,12 +94,13 @@ yak:
             "Source": "http://code.jquery.com/jquery-1.7.js"
             "Destination": "com/jquery"
             "Latest": "jquery-1.7.js"
-
+    #old stable
+    #http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js
         ember-stable.js:
             "License": "MIT"
-            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
+            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.8.1.js"
             "Destination": "com/ember"
-            "Latest": "ember-0.9.6.js"
+            "Latest": "ember-0.9.8.1.js"
         
 
     # Doesn't have a notino of "stable" releases - whatever is master on github is the "stable" release
