--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -96,9 +96,15 @@ yak:
             "Latest": "jquery-1.7.js"
     #old stable
     #http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js
-        ember-stable.js:
+        ember-debug-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
+            "Destination": "com/ember"
+            "Latest": "ember-0.9.6.js"
+
+        ember-prod-stable.js:
+            "License": "MIT"
+            "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
             "Destination": "com/ember"
             "Latest": "ember-0.9.6.js"
         
