--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -99,14 +99,14 @@ yak:
         ember-debug-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
-            "Destination": "com/ember"
+            "Destination": "com/ember-debug"
             "Latest": "ember-0.9.6.js"
 
         ember-prod-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
             "Destination": "com/ember"
-            "Latest": "ember-0.9.6.js"
+            "Latest": "ember-0.9.6.min.js"
         
 
     # Doesn't have a notino of "stable" releases - whatever is master on github is the "stable" release
