--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -99,7 +99,7 @@ yak:
         ember-debug-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
-            "Destination": "com/ember-debug"
+            "Destination": "com/ember"
             "Latest": "ember-0.9.6.js"
 
         ember-prod-stable.js:
