--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -87,19 +87,23 @@ yak:
         # Frameworks
         # -----------------------------
 
+    # XXX no reliable https
         jquery-stable.js:
             "License": "MIT/GPL"
             "Source": "http://code.jquery.com/jquery-1.7.js"
             "Destination": "com/jquery"
             "Latest": "jquery-1.7.js"
+
     #old stable
     #http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js
+    # XXX no reliable https
         ember-debug-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
             "Destination": "com/ember"
             "Latest": "ember-0.9.6.js"
 
+    # XXX no reliable https
         ember-prod-stable.js:
             "License": "MIT"
             "Source": "http://cloud.github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
@@ -133,6 +137,7 @@ yak:
 
 
     # A library for binding to keys and key combos
+    # XXX no reliable https
         keyboardjs-stable.js:
             "License": "BSD"
             "Source": "http://cloud.github.com/downloads/RobertWHurst/KeyboardJS/keyboard.0.2.2.js"
@@ -215,6 +220,7 @@ yak:
         # -----------------------------
         # Loaders, usable directly from here (or compiled inside jsBoot loader)
         # -----------------------------
+        # XXX no HTTPS
         yahoo-stable.js:
             "License": "BSD"
             "Source": "http://yui.yahooapis.com/3.6.0/build/yui-base/yui-base.js"
@@ -223,9 +229,9 @@ yak:
 
         labjs-stable.js:
             "License": "MIT"
-            "Source": "http://labjs.com/releases/LABjs-2.0.3.zip"
+            "Source": "https://raw.github.com/getify/LABjs/master/LAB.src.js"
             "Destination": "loaders"
-            "Latest": "2.0.3/LAB.src.js"
+            "Latest": "LAB.src.js"
 
         headjs-stable.js:
             "License": "MIT"
