--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -13,15 +13,13 @@ user-dmp-box-Darwin:
     ALLOWED_DOMAIN: 'app.loft.sn.ackitup.net'
 
 user-raildecom-box-Darwin:
-    ROOT: '${HOME}/workspace/webitup/buildd'
     DEPLOY_ROOT: '${HOME}/workspace/webitup/deploy/static'
-    ALLOWED_DOMAIN: 'app.roxee.loft'
 
 yak:
     ############ Package basic informations
     # Code name
     PACKAGE:
-        NAME: static.js
+        NAME: airstrip.js
         VERSION: '0.1'
     # License to be replaced in files
         LICENSE: '<a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>'
@@ -30,9 +28,9 @@ yak:
     # Author
         AUTHOR: '<a href="mailto:dev@webitup.fr">Mangled Deutz & Raildecom</a>'
     # Repo base url
-        GIT_ROOT: 'https://github.com/webitup/static/blob/master/src/'
+        GIT_ROOT: 'https://github.com/webitup/airstrip.js/blob/master/src/'
     # Homepage
-        HOME: 'http://h.ackitup.org/products/static'
+        HOME: 'http://h.ackitup.org/products/airstrip.js'
 
     ############ Platform dependent stuff: change according to your milage
     # ROOT: '${HOME}/buildd'
@@ -47,21 +45,6 @@ yak:
         TMP: 'tmp'
         # Where to deploy the builded stuff
         DEPLOY: 'dist'
-    #     # Where to output zipped packages distros, if need be
-    #     PACK: 'packages'
-    #     # Where to deploy the documentation, if any
-    #     DOC: 'doc'
-    #     # Where to put the startup scripts for the daemons (used only on MAC)
-    #     SCRIPT: 'bin'
-    # # These are generally refered to in startup scripts and conf files as part of templating
-    #     # Where to output configuration files
-    #     ETC: 'etc'
-    #     # Where to make the "data" lives (like databases)
-    #     DATA: 'data'
-    #     # Where any log files should be put
-    #     LOG: 'log'
-    #     # Where pid files and such should be put
-    #     RUN: 'run'
 
     ###### Project specific settings
     # This is used to allow access in the XDomain file
