--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -7,10 +7,10 @@ user-jenkins-box-Linux:
     DEPLOY_ROOT: '/var/www/deploy/static'
     ALLOWED_DOMAIN: 'app.sn.ackitup.net'
 
-user-dmp-box-Darwin:
-    ROOT: '${HOME}/buildd/stage.webitup.org'
-    DEPLOY_ROOT: '${HOME}/buildd/deploy.webitup.org/web/static'
-    ALLOWED_DOMAIN: 'app.loft.sn.ackitup.net'
+# user-dmp-box-Darwin:
+#     ROOT: '${HOME}/buildd/stage.webitup.org'
+#     DEPLOY_ROOT: '${HOME}/buildd/deploy.webitup.org/web/static'
+#     ALLOWED_DOMAIN: 'app.loft.sn.ackitup.net'
 
 user-raildecom-box-Darwin:
     DEPLOY_ROOT: '${HOME}/workspace/webitup/deploy/static'
