--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -28,7 +28,7 @@ yak:
     # Author
         AUTHOR: '<a href="mailto:dev@webitup.fr">Mangled Deutz & Raildecom</a>'
     # Repo base url
-        GIT_ROOT: 'https://github.com/webitup/airstrip.js/blob/master/src/'
+        GIT_ROOT: 'https://github.com/jsBoot/airstrip.js/blob/master/src'
     # Homepage
         HOME: 'http://h.ackitup.org/products/airstrip.js'
 
